# aether-hyperintelligence

./: .env.example  .gitignore  LICENSE  README.md  aether-hyperintelligence.sln  requirements-multimodal.txt
.github/workflows/: ci.yml  dspy-nightly-optimiser.yml  ebpf-compile.yml  tla-plus-verify.yml
aether-hyperintelligence/: aether-hyperintelligence.sln  requirements-dspy.txt
aether-hyperintelligence/scripts/: validate_local.py
docs/: AZURE_OPENAI_SETUP.md  platform-status.md  setup.md
ebpf/: Makefile  README.md
ebpf/programs/: aether_https_meta_trace.bpf.c
ebpf/scripts/: install_deps_ubuntu.sh
federated-learning/: README-local-run.txt  requirements-fl.txt
federated-learning/aggregator/: aether_fl_server.py
federated-learning/clients/: aether_fl_client.py
formal-verification/model-checker/: IncidentFSM.cfg
formal-verification/tla+/: IncidentCommandFSM.tla  IncidentCommandFSM_TTrace_1776331526.tla  IncidentCommandFSM_TTrace_1776331706.tla  IncidentCommandFSM_TTrace_1776331910.tla  IncidentCommandFSM_TTrace_1776332106.tla
infrastructure/docker/: docker-compose.yml
scripts/: demo_offline.py  test_azure_openai.py  validate_local.py
sdk/python/: README.md  pyproject.toml  run_tests.ps1
sdk/python/aether_sdk/: __init__.py  client.py  models.py
sdk/python/tests/: __init__.py  test_client.py  test_client_contract_shape.py  test_client_init.py  test_import.py  test_models.py
src/Aether.API/: Aether.API.csproj  Program.cs
src/Aether.Core/: Aether.Core.csproj
src/Aether.Crypto/: Aether.Crypto.csproj
src/Aether.Models/: Aether.Models.csproj
(+57 files in other folders)
