[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aether-hyperintelligence"
version = "0.1.0"
description = "Official AETHER Python SDK"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Subhasis Nanda" }
]
dependencies = [
  "httpx>=0.27,<1",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["aether_sdk*"]